Allow assignments to target multiple materials
